# tree-sitter-fireball

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fireball.pc.in
bindings/c/tree_sitter/: tree-sitter-fireball.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fireball/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFireballTests/: TreeSitterFireballTests.swift
src/: grammar.json  node-types.json  parser.c
