[package]
name = "tree-sitter-fireball"
description = "General-purpose programming language that compiles to efficient native binaries."
version = "0.1.0"
authors = ["MineGame159 <petulko08@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "fireball"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/minegame159/fireball"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
